; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/qlnx/qlnxe/extr_ecore_spq.c_ecore_eq_alloc.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/qlnx/qlnxe/extr_ecore_spq.c_ecore_eq_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ecore_hwfn = type { i32, %struct.ecore_eq* }
%struct.ecore_eq = type { i32, i32, i32 }

@GFP_KERNEL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [38 x i8] c"Failed to allocate `struct ecore_eq'\0A\00", align 1
@ECORE_NOMEM = common dso_local global i32 0, align 4
@ECORE_CHAIN_USE_TO_PRODUCE = common dso_local global i32 0, align 4
@ECORE_CHAIN_MODE_PBL = common dso_local global i32 0, align 4
@ECORE_CHAIN_CNT_TYPE_U16 = common dso_local global i32 0, align 4
@OSAL_NULL = common dso_local global i32 0, align 4
@ECORE_SUCCESS = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [29 x i8] c"Failed to allocate eq chain\0A\00", align 1
@ecore_eq_completion = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ecore_eq_alloc(%struct.ecore_hwfn* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.ecore_hwfn*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.ecore_eq*, align 8
  store %struct.ecore_hwfn* %0, %struct.ecore_hwfn** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.ecore_hwfn*, %struct.ecore_hwfn** %4, align 8
  %8 = getelementptr inbounds %struct.ecore_hwfn, %struct.ecore_hwfn* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 8
  %10 = load i32, i32* @GFP_KERNEL, align 4
  %11 = call %struct.ecore_eq* @OSAL_ZALLOC(i32 %9, i32 %10, i32 12)
  store %struct.ecore_eq* %11, %struct.ecore_eq** %6, align 8
  %12 = load %struct.ecore_eq*, %struct.ecore_eq** %6, align 8
  %13 = icmp ne %struct.ecore_eq* %12, null
  br i1 %13, label %18, label %14

14:                                               ; preds = %2
  %15 = load %struct.ecore_hwfn*, %struct.ecore_hwfn** %4, align 8
  %16 = call i32 @DP_NOTICE(%struct.ecore_hwfn* %15, i32 0, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0))
  %17 = load i32, i32* @ECORE_NOMEM, align 4
  store i32 %17, i32* %3, align 4
  br label %56

18:                                               ; preds = %2
  %19 = load %struct.ecore_hwfn*, %struct.ecore_hwfn** %4, align 8
  %20 = getelementptr inbounds %struct.ecore_hwfn, %struct.ecore_hwfn* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 8
  %22 = load i32, i32* @ECORE_CHAIN_USE_TO_PRODUCE, align 4
  %23 = load i32, i32* @ECORE_CHAIN_MODE_PBL, align 4
  %24 = load i32, i32* @ECORE_CHAIN_CNT_TYPE_U16, align 4
  %25 = load i32, i32* %5, align 4
  %26 = load %struct.ecore_eq*, %struct.ecore_eq** %6, align 8
  %27 = getelementptr inbounds %struct.ecore_eq, %struct.ecore_eq* %26, i32 0, i32 2
  %28 = load i32, i32* @OSAL_NULL, align 4
  %29 = call i64 @ecore_chain_alloc(i32 %21, i32 %22, i32 %23, i32 %24, i32 %25, i32 4, i32* %27, i32 %28)
  %30 = load i64, i64* @ECORE_SUCCESS, align 8
  %31 = icmp ne i64 %29, %30
  br i1 %31, label %32, label %35

32:                                               ; preds = %18
  %33 = load %struct.ecore_hwfn*, %struct.ecore_hwfn** %4, align 8
  %34 = call i32 @DP_NOTICE(%struct.ecore_hwfn* %33, i32 0, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.1, i64 0, i64 0))
  br label %49

35:                                               ; preds = %18
  %36 = load %struct.ecore_hwfn*, %struct.ecore_hwfn** %4, align 8
  %37 = load i32, i32* @ecore_eq_completion, align 4
  %38 = load %struct.ecore_eq*, %struct.ecore_eq** %6, align 8
  %39 = load %struct.ecore_eq*, %struct.ecore_eq** %6, align 8
  %40 = getelementptr inbounds %struct.ecore_eq, %struct.ecore_eq* %39, i32 0, i32 1
  %41 = load %struct.ecore_eq*, %struct.ecore_eq** %6, align 8
  %42 = getelementptr inbounds %struct.ecore_eq, %struct.ecore_eq* %41, i32 0, i32 0
  %43 = call i32 @ecore_int_register_cb(%struct.ecore_hwfn* %36, i32 %37, %struct.ecore_eq* %38, i32* %40, i32* %42)
  %44 = load %struct.ecore_eq*, %struct.ecore_eq** %6, align 8
  %45 = load %struct.ecore_hwfn*, %struct.ecore_hwfn** %4, align 8
  %46 = getelementptr inbounds %struct.ecore_hwfn, %struct.ecore_hwfn* %45, i32 0, i32 1
  store %struct.ecore_eq* %44, %struct.ecore_eq** %46, align 8
  %47 = load i64, i64* @ECORE_SUCCESS, align 8
  %48 = trunc i64 %47 to i32
  store i32 %48, i32* %3, align 4
  br label %56

49:                                               ; preds = %32
  %50 = load %struct.ecore_hwfn*, %struct.ecore_hwfn** %4, align 8
  %51 = getelementptr inbounds %struct.ecore_hwfn, %struct.ecore_hwfn* %50, i32 0, i32 0
  %52 = load i32, i32* %51, align 8
  %53 = load %struct.ecore_eq*, %struct.ecore_eq** %6, align 8
  %54 = call i32 @OSAL_FREE(i32 %52, %struct.ecore_eq* %53)
  %55 = load i32, i32* @ECORE_NOMEM, align 4
  store i32 %55, i32* %3, align 4
  br label %56

56:                                               ; preds = %49, %35, %14
  %57 = load i32, i32* %3, align 4
  ret i32 %57
}

declare dso_local %struct.ecore_eq* @OSAL_ZALLOC(i32, i32, i32) #1

declare dso_local i32 @DP_NOTICE(%struct.ecore_hwfn*, i32, i8*) #1

declare dso_local i64 @ecore_chain_alloc(i32, i32, i32, i32, i32, i32, i32*, i32) #1

declare dso_local i32 @ecore_int_register_cb(%struct.ecore_hwfn*, i32, %struct.ecore_eq*, i32*, i32*) #1

declare dso_local i32 @OSAL_FREE(i32, %struct.ecore_eq*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
